chore: send to login unique

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,6 +9,7 @@
   "bg_color": "#ffffff",
   "logo": "/img/uploads/logo-150resolucao-300px.png",
   "name": "Varal do torcedor",
+  "repository": "ecomplus-stores/varaldotorcedor",
   "short_name": "Varal do Torcedor",
   "lang": "pt_br",
   "currency": "BRL",
