Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -7,14 +7,16 @@
     "custom": "_"
   },
   "bg_color": "#ffffff",
+  "repository": "ecomplus-stores/varaldotorcedor",
   "logo": "/img/uploads/logo-150resolucao-300px.png",
   "name": "Varal do torcedor",
-  "repository": "ecomplus-stores/varaldotorcedor",
   "short_name": "Varal do Torcedor",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
+  "font_family": "_",
   "favicon": "/img/uploads/whatsapp-image-2020-05-28-at-15.20.21.jpeg",
+  "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#565954",
   "icon": "/img/uploads/logo-150resolucao-300px.png",
