--- a/content/settings.json
+++ b/content/settings.json
@@ -15,7 +15,7 @@
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "_",
-  "favicon": "/img/uploads/whatsapp-image-2020-05-28-at-15.20.21.jpeg",
+  "favicon": "/img/uploads/varal-4.jpeg",
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#565954",
