--- a/content/settings.json
+++ b/content/settings.json
@@ -19,8 +19,8 @@
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#565954",
-  "icon": "/img/uploads/logo-150resolucao-300px.png",
+  "icon": "/img/uploads/logo-150resolucao-300px.jpg",
   "store_id": 1186,
   "description": "Desde 1º de julho de 2018, o Varal do Torcedor vêm se tornando uma referência de qualidade e preço justo em artigos esportivos. Trazendo o que há de melhor no mundo esportivo, buscamos a fidelização de nossos clientes, através de uma experiência transparente e satisfatória. ",
-  "large_icon": "/img/uploads/logo-site-varal-do-torcedor-esticada.png"
+  "large_icon": "/img/uploads/logo-150resolucao-300px.jpg"
 }
