Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/varaldotorcedor",
-  "logo": "/img/uploads/logo-150resolucao-300px.png",
+  "logo": "/img/uploads/67d1977be4c481c4cae5eb3a59d4071e7ee954d1.png",
   "name": "Varal do torcedor",
   "short_name": "Varal do Torcedor",
   "lang": "pt_br",
@@ -19,8 +19,8 @@
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#565954",
-  "icon": "/img/uploads/logo-150resolucao-300px.jpg",
+  "icon": "/img/uploads/67d1977be4c481c4cae5eb3a59d4071e7ee954d1.png",
   "store_id": 1186,
   "description": "Desde 1º de julho de 2018, o Varal do Torcedor vêm se tornando uma referência de qualidade e preço justo em artigos esportivos. Trazendo o que há de melhor no mundo esportivo, buscamos a fidelização de nossos clientes, através de uma experiência transparente e satisfatória. ",
-  "large_icon": "/img/uploads/logo-150resolucao-300px.jpg"
+  "large_icon": "/img/uploads/67d1977be4c481c4cae5eb3a59d4071e7ee954d1.png"
 }
