Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -19,7 +19,7 @@
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#565954",
-  "icon": "/img/uploads/67d1977be4c481c4cae5eb3a59d4071e7ee954d1.png",
+  "icon": "/img/uploads/67d1977be4c481c4cae5eb3a59d4071e7ee954d1.webp",
   "store_id": 1186,
   "description": "Desde 1º de julho de 2018, o Varal do Torcedor vêm se tornando uma referência de qualidade e preço justo em artigos esportivos. Trazendo o que há de melhor no mundo esportivo, buscamos a fidelização de nossos clientes, através de uma experiência transparente e satisfatória. ",
   "large_icon": "/img/uploads/67d1977be4c481c4cae5eb3a59d4071e7ee954d1.png"
