--- a/content/settings.json
+++ b/content/settings.json
@@ -3,8 +3,8 @@
   "currency_symbol": "R$",
   "primary_color": "#000000",
   "theme": {
-    "bootswatch": "united",
-    "custom": "_"
+    "bootswatch": "_",
+    "custom": "ecom-beauty"
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/varaldotorcedor",
