--- a/content/settings.json
+++ b/content/settings.json
@@ -3,7 +3,7 @@
   "currency_symbol": "R$",
   "primary_color": "#000000",
   "theme": {
-    "bootswatch": "_",
+    "bootswatch": "united",
     "custom": "ecom-beauty"
   },
   "bg_color": "#ffffff",
